# curso_fast_api

./: .env  README.md  converter.py  main.py  pyproject.toml  resquest.http  routers.py  schemas.py
